Redirect to the video I make.

--- a/rene.html
+++ b/rene.html
@@ -12,6 +12,13 @@
 </head>
 <body>
 <script>
+
+ window.setTimeout(function(){
+
+        window.location.href = "https://youtu.be/RKjbfJBRhBo";
+
+    }, 7000);
+
  var
     NUM = 500,
     SIZE = 0.01,
@@ -159,6 +166,8 @@ addEventListener('resize', function resize() {
 }(), false);
 
 setInterval(loop, 16);
+
+
 </script>
 
 </body>
